[package]
name = "retraclauncher"
version = "1.0.18"
description = "Retrac Launcher"
authors = ["ectrc"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", branch = "main" }
reqwest = { version = "0.11.3", features = ["stream"] }
winapi = { version = "0.3", features = ["tlhelp32", "securitybaseapi", "shellapi"] }
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
window-shadows = "0.2.2"
window-vibrancy = "0.4"
futures-util = "0.3.14"
futures = "0.3.31"
dll-injector = "0.1.2"
zip-extract = "0.1.3"
tasklist = "0.2.13"
serde_json = "1.0"
sysinfo = "0.33.0"
num_cpus = "1.0"
tokio = "1.28.2"
sha2 = "0.10.8"
embed-resource = "1.6"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_SystemServices"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
